--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color:rgb(211, 177, 92);
     color: blanchedalmond;
     margin: 0px;
     padding: 0px;
@@ -13,7 +13,7 @@ a{
 section{
 width: 100%;
 height: 90vh;
-background-image: url();
+background-image: url(images/TextureFabrik_com\ _\ Photocopy\ Textures.jpeg);
 background-repeat: no-repeat;
 background-size: cover;
 }
@@ -22,7 +22,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    background-color: white;
+    background-color:rgb(165, 139, 72);
     box-shadow: 2px 2px 12px rgb(189, 168, 116);
     padding: 0px 5%;
 }
@@ -39,7 +39,7 @@ nav ul li a{
 .logo{
     font-family: 'Finger Paint', cursive;
     color: rgb(104, 54, 7);
-    font-size: 23px;
+    font-size: 30px;
 }
 .Active{
     font-weight: bold;
