--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body{
-    background-color:rgb(211, 177, 92);
+    background-color:rgb(70, 66, 66);
     color: blanchedalmond;
     margin: 0px;
     padding: 0px;
+    background-image: url(images/1920x1280\ wood\ desktop\ background\ wallpaper\ hd.jpeg);
 }
 ul{
     list-style: none;
@@ -13,9 +14,7 @@ a{
 section{
 width: 100%;
 height: 90vh;
-background-image: url(images/TextureFabrik_com\ _\ Photocopy\ Textures.jpeg);
-background-repeat: no-repeat;
-background-size: cover;
+position: relative;
 }
 nav{
     display: flex;
@@ -45,3 +44,61 @@ nav ul li a{
     font-weight: bold;
     color: rgb(7, 6, 5); 
 }
+.text-container p:nth-child(1){
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    color:rgb(214, 127, 14) ;
+    font-size: 25px;
+}
+.text-container p:nth-child(2){
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 50px;
+}
+span{
+color: rgb(226, 111, 3);
+font-style: italic;
+font-family:'Bungee Shade', cursive;
+}
+.text-container p:nth-child(3){
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:white;
+    font-size: 20px;
+    line-height: 30px;
+    width: 200px;
+}
+.text-container p{
+    line-height: 0px;
+    margin: 45px 0px 25px;
+}
+.text-container{
+    position: absolute;
+    left: 13%;
+    top: 20%;
+    transform: translate(-13-20%);
+}
+.text-container button{
+    width: 130px;
+    height: 42px;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    margin:0px 10px;
+}
+.Hire-btn{
+    border:2px solid #ffffff;
+    color:#ffffff;
+    background-color:transparent;
+}
+button:active{
+    transform: scale(1.4);
+}
+.model{
+    height: 560px;
+    position: absolute;
+    bottom: px;
+    left: 70%;
+    transform:translateX(-70%)
+   }
