--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     background-color:rgb(70, 66, 66);
     color: blanchedalmond;
-    margin: 0px;
+    margin: 30px;
     padding: 0px;
     background-image: url(images/1920x1280\ wood\ desktop\ background\ wallpaper\ hd.jpeg);
     background-repeat: no-repeat;
@@ -111,14 +111,14 @@ button:active{
         margin: 20px; 
    }
    .about-container{
-    width: 80%;
-    height: 330px;
+   
+    padding:20px;
     background-color: rgb(58, 31, 4);   
     border-radius: 20px;
     box-shadow: 2px 2px 12px ;
     margin: -7% auto 20px auto;
     position: relative;
-    margin-top: auto;
+    margin-top: 70px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -128,10 +128,20 @@ button:active{
        margin: 30px;
    }
    .about-text p:nth-child(1){
-       color: rgb(128, 253, 2);
+       color: rgb(10, 7, 1);
        font-family:Georgia, 'Times New Roman', Times, serif;
        font-weight: bold;
-       font-size: 23px;
+       font-size: 30px;
        line-height: 0px;
    }
-
+   .about-text p:nth-child(2){
+    color: gold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 20pxpx;
+    line-height: 0px;
+   }
+   h3,h4{
+       color: gold;
+       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   }
