--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
     background-color:rgb(70, 66, 66);
     color: blanchedalmond;
-    margin: 0px;
-    padding: 8px;
+    margin: 30px;
+    padding: 40px;
     background-image: url(images/1920x1280\ wood\ desktop\ background\ wallpaper\ hd.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -158,8 +158,15 @@ button:active{
         background-color: rgb(10, 7, 1);
    }
    .projects{
-       
-       background-color:rgb(58, 31, 4);
+    padding: 2px;
+    background-color: rgb(58, 31, 4);   
+    border-radius: 20px;
+    box-shadow: 2px 2px 12px ;
+    position: relative;
+    margin-top: 80px;
+    margin-bottom:80px;
+    display: flex;
+    align-items: center;
    }
     project-text p{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -183,4 +190,20 @@ button:active{
 }
 a{
     color: white;
+}
+.project-text h1{
+    color: black;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+}
+.project-text h2{
+    text-align: center;
+    font-size: 30px;
+    color: olive;
+}
+.project-text{
+    padding: 30px;
+    padding-top: 2px;
 }
