--- a/styles.css
+++ b/styles.css
@@ -207,3 +207,35 @@ a{
     padding: 30px;
     padding-top: 2px;
 }
+.services{
+    height: 600px;
+    background-image: url(images/desiner.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+.services-text p:nth-child(1){
+   font-weight: bold;
+   color:goldenrod ;
+   font-size: 35px;
+   line-height: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.services-text p:nth-child(2){
+    font-weight: bold;
+    color: gold;
+    font-size: 20px;
+    line-height: 10px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
+ .services-text p:nth-child(3){
+    font-weight: bold;
+    color: black;
+ }
+ .services-text{
+     width: 500px;
+     margin: 50px 0px;
+ }
+ .box-1,.box-2,.box-3{
+     width: 300;
+ }
