--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ nav{
     align-items: center;
     height: 60px;
     background-color:rgb(165, 139, 72);
-    box-shadow: 2px 2px 12px rgb(189, 168, 116);
+    box-shadow: 2px 2px 12px rgb(65, 160, 36);
     padding: 0px 5%;
 }
 nav ul{
@@ -116,7 +116,7 @@ button:active{
     padding:20px;
     background-color: rgb(58, 31, 4);   
     border-radius: 20px;
-    box-shadow: 2px 2px 12px ;
+    box-shadow: 2px 2px 12px red;
     margin: -7% auto 20px auto;
     position: relative;
     margin-top: 70px;
@@ -161,7 +161,7 @@ button:active{
     padding: 2px;
     background-color: rgb(58, 31, 4);   
     border-radius: 20px;
-    box-shadow: 2px 2px 12px ;
+    box-shadow: 2px 2px 12px yellowgreen;
     position: relative;
     margin-top: 80px;
     margin-bottom:80px;
@@ -212,29 +212,41 @@ a{
     background-image: url(images/desiner.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 2px;
+    background-color: rgb(58, 31, 4);   
+    border-radius: 20px;
+    box-shadow: 2px 2px 12px yellow ;
+    position: relative;
+    margin-top: 80px;
+    margin-bottom:80px;
+    display: flex;
+
 
 }
 .services-text p:nth-child(1){
    font-weight: bold;
+   margin: auto;
+   text-align: center;
    color:goldenrod ;
-   font-size: 35px;
-   line-height: 0px;
+   font-size: 40px;
+   line-height:20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .services-text p:nth-child(2){
     font-weight: bold;
     color: gold;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 10px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
  .services-text p:nth-child(3){
     font-weight: bold;
-    color: black;
+    font-size: 20px ;
  }
  .services-text{
-     width: 500px;
-     margin: 50px 0px;
+     /* width: 600px; */
+     margin: 50px;
+     padding-top: 30px;
  }
  .box-1,.box-2,.box-3{
      width: 300;
