--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
     background-color:rgb(70, 66, 66);
     color: blanchedalmond;
-    margin: 30px;
-    padding: 40px;
+    /* margin: 30px; */
+    /* padding: 40px; */
     background-image: url(images/1920x1280\ wood\ desktop\ background\ wallpaper\ hd.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -114,10 +114,11 @@ button:active{
    .about-container{
    
     padding:20px;
+    margin: 60px;
     background-color: rgb(58, 31, 4);   
     border-radius: 20px;
     box-shadow: 2px 2px 12px red;
-    margin: -7% auto 20px auto;
+    /* margin: -7% auto 20px auto; */
     position: relative;
     margin-top: 70px;
     display: flex;
@@ -159,6 +160,7 @@ button:active{
    }
    .projects{
     padding: 2px;
+    margin: 60px;
     background-color: rgb(58, 31, 4);   
     border-radius: 20px;
     box-shadow: 2px 2px 12px yellowgreen;
@@ -217,8 +219,8 @@ a{
     border-radius: 20px;
     box-shadow: 2px 2px 12px yellow ;
     position: relative;
-    margin-top: 80px;
-    margin-bottom:80px;
+    margin-top: 10px;
+    margin-bottom:10px;
     display: flex;
 
 
@@ -226,7 +228,6 @@ a{
 .services-text p:nth-child(1){
    font-weight: bold;
    margin: auto;
-   text-align: center;
    color:goldenrod ;
    font-size: 40px;
    line-height:20px;
@@ -241,12 +242,13 @@ a{
  }
  .services-text p:nth-child(3){
     font-weight: bold;
-    font-size: 20px ;
+    font-size: 15px ;
+    width: 400px;
  }
  .services-text{
      /* width: 600px; */
-     margin: 50px;
-     padding-top: 30px;
+     margin: 20px;
+     padding-top: 20px;
  }
  .box-1,.box-2,.box-3{
      width: 300;
