--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,34 @@ a{
     padding: 30px;
     padding-top: 2px;
 }
+/* contact me */
+.contact-me{
+    /* width: 100%; */
+    height: 280px;
+    background-image: url(images/Disney.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center ;
+    box-shadow: 2px 2px 12px rgb(245, 186, 39);
+    margin: 10px;
+    border-radius: 10px;
+} 
+.contact-me p{
+    color: black;
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    border-bottom: 2px solid maroon;
+}
+.contact-me button{
+width:200px;
+height: 40px;
+background-color: maroon;
+outline: none;
+border: none;
+font-size: 14px;
+font-weight: bold;
+}
