--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ nav{
     box-shadow: 2px 2px 12px rgb(65, 160, 36);
     padding: 0px 5%;
     margin: 50px;
+    border-radius: 15px;
 }
 nav ul{
     display:flex;
@@ -213,7 +214,7 @@ a{
 /* contact me */
 .contact-me{
     /* width: 100%; */
-    height: 280px;
+    /* height: 280px; */
     background-image: url(images/Disney.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -224,6 +225,7 @@ a{
     box-shadow: 2px 2px 12px rgb(245, 186, 39);
     margin: 10px;
     border-radius: 10px;
+    padding-bottom: 20px;
 } 
 .contact-me p{
     color: black;
@@ -231,6 +233,10 @@ a{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     border-bottom: 2px solid maroon;
+}
+.contact-me h1{
+    font-size: 40px;
+    color: rgb(43, 30, 17);
 }
 .contact-me button{
 width:200px;
@@ -240,4 +246,68 @@ outline: none;
 border: none;
 font-size: 14px;
 font-weight: bold;
+border-radius: 20px;
+}
+/* footer */
+footer{
+    /* height: 300px; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    background-color:rgb(192, 167, 142);
+    margin-top: 40px;
+    border-radius: 100px;
+    margin: 60px;
+
+}
+footer p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+footer p:nth-child(1){
+    font-weight: bold;
+    color: maroon;
+    line-height: 10px;
+    font-family: 'Finger Paint', cursive;
+    color: rgb(104, 54, 7);
+    font-size: 40px;
+}
+footer p:nth-child(2){
+    font-size: 16px;
+    color:black;
+    /* width: 600px; */
+    text-align: 
+}
+footer span{
+    color: rgb(104, 54, 7);
+    font-family: 'Finger Paint', cursive;
+    font-size: 30px;
+}
+.social-icons a{
+    width: 40px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    background-color:rgb(128, 75, 6);
+    margin: 20px 20px;
+    border-radius: 20px;
+}
+.social-icons{
+    display: flex;
+    justify-content: center;
+}
+.copyright{
+    font-size: 17px;
+}
+.social-icons i{
+    color: #000000;
+}
+.social-icons a:hover{
+    background-color: #b89d9d;
+    box-shadow: 2px 2px 12px rgb(0,0 ,0,0.2) ;
+    transition: all ease 0.5s;
+}
+.social-icons a:hover i{
+    color: #ffffff;
+    transition:all ease 0.5s;
 }
